<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipesFragment">

    <Spinner
        android:id="@+id/spinnerFlavour"
        style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/purple_200"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/cakeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="202dp"
        android:layout_height="88dp"
        android:layout_marginEnd="44dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fourinch"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205">

        <Button
            android:id="@+id/removeBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/custom_btn_remove"
            android:backgroundTint="@color/purple_200"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/itemQuanEt"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="17dp"
            android:minEms="1"
            android:text="@string/Default0"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/custom_btn_add"
            android:backgroundTint="@color/purple_200"
            tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>

    <TextView
        android:id="@+id/cakeText"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:text="@string/Cake"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/cuppiesText"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:text="@string/Cuppies"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />

    <TextView
        android:id="@+id/fourinch"
        android:layout_width="106dp"
        android:layout_height="37dp"
        android:layout_marginStart="90dp"
        android:text="@string/fourIn"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/relativeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="202dp"
        android:layout_height="88dp"
        android:layout_marginEnd="44dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sixinch"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/removeBtn2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/custom_btn_remove"
            android:backgroundTint="@color/purple_200"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/itemQuanEt2"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="17dp"
            android:minEms="1"
            android:text="@string/Default0"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/addBtn2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/custom_btn_add"
            android:backgroundTint="@color/purple_200"
            tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>

    <TextView
        android:id="@+id/sixinch"
        android:layout_width="106dp"
        android:layout_height="37dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="44dp"
        android:text="@string/sixIn"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/relativeLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourinch" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="202dp"
        android:layout_height="88dp"
        android:layout_marginEnd="44dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seveninch"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/removeBtn3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/custom_btn_remove"
            android:backgroundTint="@color/purple_200"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/itemQuanEt3"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="17dp"
            android:minEms="1"
            android:text="@string/Default0"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/addBtn3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/custom_btn_add"
            android:backgroundTint="@color/purple_200"
            tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>

    <TextView
        android:id="@+id/seveninch"
        android:layout_width="106dp"
        android:layout_height="37dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="36dp"
        android:text="@string/sevenIn"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/relativeLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sixinch" />

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="202dp"
        android:layout_height="88dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636">

        <Button
            android:id="@+id/removeBtn4"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/custom_btn_remove"
            android:backgroundTint="@color/purple_200"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/itemQuanEt4"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="17dp"
            android:minEms="1"
            android:text="@string/Default0"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/addBtn4"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/custom_btn_add"
            android:backgroundTint="@color/purple_200"
            tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:text="@string/Create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886"
        android:backgroundTint="@color/purple_200"
        android:textColor="@color/text"/>

</androidx.constraintlayout.widget.ConstraintLayout>